--- a/pom.xml
+++ b/pom.xml
@@ -164,7 +164,32 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin>  
+			<plugin>
+ 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+				  <classifier>${server}</classifier>
+				  <warName>mapfishapp-private</warName>
+<!--				  <filters>
+				    <filter>${basedir}/src/${server}/maven.filter</filter>
+				  </filters>
+				  <webResources>
+				  	<resource>
+				    	<directory>src/${server}</directory>
+				      <filtering>false</filtering>
+				      <excludes>
+				        <exclude>README</exclude>
+				        <exclude>maven.filter</exclude>
+				      </excludes>
+				    </resource>
+				    <resource>
+				      <directory>src/main/filtered-resources</directory>
+				      <filtering>true</filtering>
+				    </resource>
+				  </webResources>-->
+				</configuration>
+		  </plugin>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
