mapfishapp: s/geob/geor/g on all files & fixed build process - see #1909

--- a/jsbuild/edit.cfg
+++ b/jsbuild/edit.cfg
@@ -31,8 +31,8 @@ first =
     overrides/override-ext-ajax.js
     Styler/Util.js
 include =
-    GEOB_editing.js
-    GEOB.js
+    GEOR_editing.js
+    GEOR.js
 exclude =
     Ext.ux.js
     Ext.ux/SingleFile.js
