--- a/jsbuild/main.cfg
+++ b/jsbuild/main.cfg
@@ -28,11 +28,7 @@ first =
     overrides/override-ext-ajax.js
     Styler/Util.js
 include =
-    GEOB_getfeatureinfo.js
-    GEOB_resultspanel.js
-    GEOB_querier.js
-    GEOB_styler.js
-    GEOB.js
+    GEOR.js
 exclude =
     Ext.ux.js
     Ext.ux/SingleFile.js
