mapfishapp/edit: js build improved - see #1961

--- a/jsbuild/main.cfg
+++ b/jsbuild/main.cfg
@@ -28,6 +28,11 @@ first =
     overrides/override-ext-ajax.js
     Styler/Util.js
 include =
+    GEOR_getfeatureinfo.js
+    GEOR_resultspanel.js
+    GEOR_querier.js
+    GEOR_styler.js
+    GEOR_wmc.js
     GEOR.js
 exclude =
     Ext.ux.js
