--- a/src/main/resources/default.wmc.example
+++ b/src/main/resources/default.wmc.example
@@ -1,84 +1,38 @@
-<ViewContext xmlns="http://www.opengis.net/context" version="1.1.0" id="geobretagne-modele" xsi:schemaLocation="http://www.opengis.net/context http://schemas.opengis.net/context/1.1.0/context.xsd"
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<ViewContext xmlns="http://www.opengis.net/context" version="1.1.0" id="default.wmc" xsi:schemaLocation="http://www.opengis.net/context http://schemas.opengis.net/context/1.1.0/context.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <General>
-    <Window width="800" height="800" />
-    <BoundingBox minx="83000" miny="6700000" maxx="420000" maxy="6900000" SRS="EPSG:2154" />
-    <Title>carte geobretagne</Title>
-    <KeywordList>
-        <Keyword>GEOBRETAGNE</Keyword>
-        <Keyword>BRETAGNE</Keyword>
-        <Keyword>OPENSTREETMAP</Keyword>
-    </KeywordList>
-    <Abstract>carte geobretagne par defaut constituee des couches referentiel OpenStreetMap et IGN</Abstract>
-    <!--
-    <LogoURL>
-       <OnlineResource xlink:type="simple" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://www.openstreetmap.org/images/osm_logo.png"/>
-    </LogoURL>
-    -->
-    <DescriptionURL>
-        <OnlineResource xlink:type="simple" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://www.geobretagne.fr/"/>
-    </DescriptionURL>
+    <Window width="1031" height="389"/>
+    <BoundingBox minx="-357823" miny="6037008" maxx="1313632" maxy="7230727" SRS="EPSG:2154"/>
+    <Title/>
     <Extension>
-      <!--ol:maxExtent xmlns:ol="http://openlayers.org/context" minx="83000" miny="6200000" maxx="550000" maxy="7000000"/-->
       <ol:maxExtent xmlns:ol="http://openlayers.org/context" minx="-357823" miny="6037008" maxx="1313632" maxy="7230727"/>
     </Extension>
   </General>
   <LayerList>
-    <!-- orthophotographie -->
-    <Layer queryable="0" hidden="1">
-      <Server service="OGC:WMS" version="1.1.1">
-        <OnlineResource xlink:type="simple" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://tile.geobretagne.fr/service/wms" />
-      </Server>
-      <Name>satellite</Name>
-      <Title>photographie</Title>
-      <Abstract>photographies aeriennes IGN, BMO</Abstract>
-      <MetadataURL>
-          <OnlineResource xlink:type="simple" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://geobretagne.fr/geonetwork?uuid=3a0ac2e3-7af1-4dec-9f36-dae6b5a8c731" />
-      </MetadataURL>
-      <FormatList>
-        <Format current="1">image/jpeg</Format>
-      </FormatList>
-      <StyleList>
-        <Style>
-          <Name />
-          <Title />
-        </Style>
-      </StyleList>
-      <Extension>
-        <ol:maxExtent xmlns:ol="http://openlayers.org/context" minx="-357823.2365" miny="6037008.6939" maxx="2146865.3059" maxy="8541697.2363" />
-        <ol:tileSize xmlns:ol="http://openlayers.org/context" width="256" height="256" />
-        <ol:numZoomLevels xmlns:ol="http://openlayers.org/context">20</ol:numZoomLevels>
-        <ol:units xmlns:ol="http://openlayers.org/context">m</ol:units>
-        <ol:isBaseLayer xmlns:ol="http://openlayers.org/context">false</ol:isBaseLayer>
-        <ol:opacity xmlns:ol="http://openlayers.org/context">1</ol:opacity>
-        <ol:displayInLayerSwitcher xmlns:ol="http://openlayers.org/context">true</ol:displayInLayerSwitcher>
-        <ol:singleTile xmlns:ol="http://openlayers.org/context">false</ol:singleTile>
-      </Extension>
-    </Layer>
-    <!-- osm -->
+    <!--
+        carte openstreetmap
+    -->
     <Layer queryable="0" hidden="0">
       <Server service="OGC:WMS" version="1.1.1">
-        <OnlineResource xlink:type="simple" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://osm.geobretagne.fr/service/wms" />
+        <OnlineResource xlink:type="simple" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://osm.geobretagne.fr/service/wms"/>
       </Server>
       <Name>osm:google</Name>
       <Title>OpenStreetMap</Title>
-      <Abstract>carte OpenStreetMap licence CreativeCommon by-SA</Abstract>
       <MetadataURL>
-          <OnlineResource xlink:type="simple" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://wiki.openstreetmap.org/wiki/FR:OpenStreetMap_License" />
+        <OnlineResource xlink:type="simple" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://wiki.openstreetmap.org/wiki/FR:OpenStreetMap_License" />
       </MetadataURL>
       <FormatList>
         <Format current="1">image/png</Format>
       </FormatList>
       <StyleList>
         <Style>
-          <Name />
-          <Title />
+          <Name/>
+          <Title/>
         </Style>
       </StyleList>
       <Extension>
-        <ol:maxExtent xmlns:ol="http://openlayers.org/context" minx="-357823.2365" miny="6037008.6939" maxx="2146865.3059" maxy="8541697.2363" />
-        <ol:tileSize xmlns:ol="http://openlayers.org/context" width="256" height="256" />
-        <ol:numZoomLevels xmlns:ol="http://openlayers.org/context">20</ol:numZoomLevels>
+        <ol:maxExtent xmlns:ol="http://openlayers.org/context" minx="-357823" miny="6037008" maxx="1313632" maxy="7230727"/>
+        <ol:tileSize width="256" height="256" xmlns:ol="http://openlayers.org/context"/>
+        <ol:numZoomLevels xmlns:ol="http://openlayers.org/context">13</ol:numZoomLevels>
         <ol:units xmlns:ol="http://openlayers.org/context">m</ol:units>
         <ol:isBaseLayer xmlns:ol="http://openlayers.org/context">false</ol:isBaseLayer>
         <ol:opacity xmlns:ol="http://openlayers.org/context">1</ol:opacity>
@@ -86,78 +40,133 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
         <ol:singleTile xmlns:ol="http://openlayers.org/context">false</ol:singleTile>
       </Extension>
     </Layer>
-    <!-- carte ign -->
+    
     <Layer queryable="0" hidden="1">
       <Server service="OGC:WMS" version="1.1.1">
-        <OnlineResource xlink:type="simple" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://tile.geobretagne.fr/service/wms" />
+        <OnlineResource xlink:type="simple" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://geolittoral.application.equipement.gouv.fr/map/mapserv?map=/opt/data/carto/applis/geolittoral/map/metropole.www.map&amp;"/>
       </Server>
-      <Name>carte</Name>
-      <Title>carte IGN</Title>
-      <Abstract>carte IGN : scan25, scan regional, scan 1000</Abstract>
-      <MetadataURL>
-          <OnlineResource xlink:type="simple" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://www.ign.fr/" />
-      </MetadataURL>
+      <Name>ortholittorale</Name>
+      <Title>Ortho Littorale</Title>
+      <sld:MinScaleDenominator xmlns:sld="http://www.opengis.net/sld">1000.0000000000</sld:MinScaleDenominator>
+      <sld:MaxScaleDenominator xmlns:sld="http://www.opengis.net/sld">11000.000000000</sld:MaxScaleDenominator>
       <FormatList>
         <Format current="1">image/jpeg</Format>
+        <Format>image/gif</Format>
+        <Format>image/png; mode=24bit</Format>
+        <Format>image/png</Format>
       </FormatList>
       <StyleList>
         <Style>
-          <Name />
-          <Title />
+          <Name/>
+          <Title/>
         </Style>
       </StyleList>
       <Extension>
-        <ol:maxExtent xmlns:ol="http://openlayers.org/context" minx="-357823.2365" miny="6037008.6939" maxx="2146865.3059" maxy="8541697.2363" />
-        <ol:tileSize xmlns:ol="http://openlayers.org/context" width="256" height="256" />
-        <ol:numZoomLevels xmlns:ol="http://openlayers.org/context">20</ol:numZoomLevels>
+        <ol:maxExtent xmlns:ol="http://openlayers.org/context" minx="-357823" miny="6037008" maxx="1313632" maxy="7230727"/>
+        <ol:transparent xmlns:ol="http://openlayers.org/context">false</ol:transparent>
+        <ol:numZoomLevels xmlns:ol="http://openlayers.org/context">13</ol:numZoomLevels>
         <ol:units xmlns:ol="http://openlayers.org/context">m</ol:units>
         <ol:isBaseLayer xmlns:ol="http://openlayers.org/context">false</ol:isBaseLayer>
         <ol:opacity xmlns:ol="http://openlayers.org/context">1</ol:opacity>
         <ol:displayInLayerSwitcher xmlns:ol="http://openlayers.org/context">true</ol:displayInLayerSwitcher>
         <ol:singleTile xmlns:ol="http://openlayers.org/context">false</ol:singleTile>
+        <ol:tileSize xmlns:ol="http://openlayers.org/context" width="512" height="512"/>
       </Extension>
     </Layer>
-    <!-- communes -->
-    <Layer queryable="1" hidden="1">
+    
+    <Layer queryable="1" hidden="0">
       <Server service="OGC:WMS" version="1.1.1">
-        <OnlineResource xlink:type="simple" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://geobretagne.fr/geoserver/wms" />
+        <OnlineResource xlink:type="simple" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://c2cpc83.camptocamp.com/geoserver/wms?SERVICE=WMS&amp;"/>
       </Server>
-      <Name>geob_loc:COMMUNE</Name>
-      <Title>limite des communes</Title>
-      <Abstract>limites des communes</Abstract>
+      <Name>geob:communes_geofla</Name>
+      <Title>Communes bretonnes</Title>
       <MetadataURL>
-          <OnlineResource xlink:type="simple" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://geobretagne.fr/geonetwork?uuid=003-001-001" />
+          <OnlineResource xlink:type="simple" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://geobretagne.fr/geonetwork/srv/fr/metadata.show?uuid=b08e6cb1-236c-49b7-88f9-42b500d274d5" />
       </MetadataURL>
       <FormatList>
         <Format current="1">image/png</Format>
+        <Format>application/atom xml</Format>
+        <Format>application/atom+xml</Format>
+        <Format>application/openlayers</Format>
+        <Format>application/pdf</Format>
+        <Format>application/rss xml</Format>
+        <Format>application/rss+xml</Format>
+        <Format>application/vnd.google-earth.kml</Format>
+        <Format>application/vnd.google-earth.kml xml</Format>
+        <Format>application/vnd.google-earth.kml+xml</Format>
+        <Format>application/vnd.google-earth.kmz</Format>
+        <Format>application/vnd.google-earth.kmz xml</Format>
+        <Format>application/vnd.google-earth.kmz+xml</Format>
+        <Format>atom</Format>
+        <Format>image/geotiff</Format>
+        <Format>image/geotiff8</Format>
+        <Format>image/gif</Format>
+        <Format>image/jpeg</Format>
+        <Format>image/png8</Format>
+        <Format>image/svg</Format>
+        <Format>image/svg xml</Format>
+        <Format>image/svg+xml</Format>
+        <Format>image/tiff</Format>
+        <Format>image/tiff8</Format>
+        <Format>kml</Format>
+        <Format>kmz</Format>
+        <Format>openlayers</Format>
+        <Format>rss</Format>
       </FormatList>
       <StyleList>
         <Style>
-          <Name>administratif_gris</Name>
-          <Title>limites en gris</Title>
+          <Name>line</Name>
+          <Title>1 px blue line</Title>
+          <Abstract>Default line style, 1 pixel wide blue</Abstract>
         </Style>
         <Style>
-          <Name>administratif_clair</Name>
-          <Title>limites en blanc</Title>
-        </Style>
-        <Style>
-          <Name>administratif_jaune</Name>
-          <Title>limites en jaune</Title>
-        </Style>
-        <Style current="1">
-          <Name>administratif_violet</Name>
-          <Title>limites en violet</Title>
+          <Name>bbi_communes_classif3</Name>
+          <Title>Classification par départements</Title>
         </Style>
       </StyleList>
       <Extension>
-        <ol:tileSize xmlns:ol="http://openlayers.org/context" width="512" height="512" />
-        <ol:numZoomLevels xmlns:ol="http://openlayers.org/context">20</ol:numZoomLevels>
+        <ol:maxExtent xmlns:ol="http://openlayers.org/context" minx="-357823" miny="6037008" maxx="1313632" maxy="7230727"/>
+        <ol:transparent xmlns:ol="http://openlayers.org/context">true</ol:transparent>
+        <ol:numZoomLevels xmlns:ol="http://openlayers.org/context">13</ol:numZoomLevels>
         <ol:units xmlns:ol="http://openlayers.org/context">m</ol:units>
         <ol:isBaseLayer xmlns:ol="http://openlayers.org/context">false</ol:isBaseLayer>
         <ol:opacity xmlns:ol="http://openlayers.org/context">0.5</ol:opacity>
+        <ol:displayInLayerSwitcher xmlns:ol="http://openlayers.org/context">true</ol:displayInLayerSwitcher>
+        <ol:singleTile xmlns:ol="http://openlayers.org/context">true</ol:singleTile>
+      </Extension>
+    </Layer>
+    
+    <Layer queryable="1" hidden="0">
+      <Server service="OGC:WMS" version="1.1.1">
+        <OnlineResource xlink:type="simple" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://geolittoral.application.equipement.gouv.fr/map/mapserv?map=/opt/data/carto/applis/geolittoral/map/metropole.www.map&amp;"/>
+      </Server>
+      <Name>Sentiers_littoraux</Name>
+      <Title>Sentiers littoraux</Title>
+      <FormatList>
+        <Format current="1">image/png</Format>
+        <Format>image/gif</Format>
+        <Format>image/png; mode=24bit</Format>
+        <Format>image/jpeg</Format>
+        <Format>image/vnd.wap.wbmp</Format>
+        <Format>image/tiff</Format>
+        <Format>image/svg+xml</Format>
+      </FormatList>
+      <StyleList>
+        <Style>
+          <Name>default</Name>
+          <Title>default</Title>
+        </Style>
+      </StyleList>
+      <Extension>
+        <ol:maxExtent xmlns:ol="http://openlayers.org/context" minx="-357823" miny="6037008" maxx="1313632" maxy="7230727"/>
         <ol:transparent xmlns:ol="http://openlayers.org/context">true</ol:transparent>
+        <ol:numZoomLevels xmlns:ol="http://openlayers.org/context">13</ol:numZoomLevels>
+        <ol:units xmlns:ol="http://openlayers.org/context">m</ol:units>
+        <ol:isBaseLayer xmlns:ol="http://openlayers.org/context">false</ol:isBaseLayer>
+        <ol:opacity xmlns:ol="http://openlayers.org/context">1</ol:opacity>
         <ol:displayInLayerSwitcher xmlns:ol="http://openlayers.org/context">true</ol:displayInLayerSwitcher>
         <ol:singleTile xmlns:ol="http://openlayers.org/context">false</ol:singleTile>
+        <ol:tileSize xmlns:ol="http://openlayers.org/context" width="512" height="512"/>
       </Extension>
     </Layer>
   </LayerList>
