mapfishapp: Ext.ux has moved to webapp lib directory

--- a/jsbuild/edit.cfg
+++ b/jsbuild/edit.cfg
@@ -1,6 +1,6 @@
 [mapfisheditapp.js]
 root =
-    ../src/main/webapp/Ext.ux/lib
+    ../src/main/webapp/lib/Ext.ux/lib
     ../src/main/webapp/lib/proj4js/lib
     ../src/main/webapp/lib/externals/openlayers/lib
     ../src/main/webapp/lib/addins/loadingPanel/trunk/lib
