--- a/jsbuild/main.cfg
+++ b/jsbuild/main.cfg
@@ -1,6 +1,6 @@
 [mapfishapp.js]
 root =
-    ../src/main/webapp/Ext.ux/lib
+    ../src/main/webapp/lib/Ext.ux/lib
     ../src/main/webapp/lib/proj4js/lib
     ../src/main/webapp/lib/styler/lib
     ../src/main/webapp/lib/externals/openlayers/lib
