--- a/pom.xml
+++ b/pom.xml
@@ -147,16 +147,29 @@
                       Copy du fichier default.wmc.example si il n'existe
                       pas de fichier default.wmc dans le repertoire src/main/webapp.
                       Ce fichier n'est pas écrasé si le packageur de l'application
-                      a placé son propore fichier default.wmc
+                      a placé son propre fichier default.wmc
                 -->
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>defaultWmcCopy</id>
+						<id>serverConfigCopy</id>
 						<phase>generate-sources</phase>
 						<configuration>
 							<tasks>
-								<copy file="${basedir}/src/main/resources/default.wmc.example" toFile="${basedir}/src/main/webapp/default.wmc"/>
+								<!--
+									global configuration from profile (print/viewer/startup layers/...)
+								-->
+								<copy todir="${basedir}/src/main/webapp/" overwrite="true" verbose="true" failonerror="false">
+									<fileset dir="${basedir}/src/${server}/">
+										<or>
+											<filename name="**/*.js" />
+											<filename name="**/*.wmc" />
+											<filename name="**/*.pdf" />
+											<filename name="**/*.yaml" />
+											<filename name="**/*.jsp" />
+										</or>
+									</fileset>
+								</copy>
 							</tasks>
 						</configuration>
 						<goals>
