mapfishapp/edit: layers panel gets a title even when collapsed - closes #2129

--- a/jsbuild/edit.cfg
+++ b/jsbuild/edit.cfg
@@ -28,6 +28,7 @@ first =
     OpenLayers/Filter.js
     OpenLayers/Filter/Comparison.js
 include =
+    Ext.ux/widgets/collapsedtitle/PanelCollapsedTitle.js
     GEOR_editing.js
     GEOR.js
 exclude =
