--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,10 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
+		      <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+		      </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
@@ -159,16 +163,15 @@
 								<!--
 									global configuration from profile (print/viewer/startup layers/...)
 								-->
+								<copy todir="${basedir}/src/main/webapp/" filtering="true" overwrite="true" verbose="true" failonerror="false">
+									<fileset dir="${basedir}/src/main/filtered-resources/"/>
+									<filterset begintoken="$${" endtoken="}">
+										<filtersfile file="${confdir}/${project.artifactId}/maven.filter"/>
+									</filterset>
+                				</copy>
 								<copy todir="${basedir}/src/main/webapp/" overwrite="true" verbose="true" failonerror="false">
-									<fileset dir="${confdir}/${project.artifactId}/">
-										<or>
-											<filename name="**/*.js" />
-											<filename name="**/*.svg" />
-											<filename name="**/*.wmc" />
-											<filename name="**/*.pdf" />
-											<filename name="**/*.yaml" />
-											<filename name="**/*.jsp" />
-										</or>
+									<fileset dir="${confdir}/${project.artifactId}">
+										<exclude name="**/maven.filter"/>
 									</fileset>
 								</copy>
 							</tasks>
