--- a/pom.xml
+++ b/pom.xml
@@ -165,7 +165,7 @@
 								-->
 								<copy todir="${basedir}/src/main/webapp/" filtering="true" overwrite="true" verbose="true" failonerror="false">
 									<fileset dir="${basedir}/src/main/filtered-resources/"/>
-									<filterset begintoken="$${" endtoken="}">
+									<filterset begintoken="$${" endtoken="}" recurse="false">
 										<filtersfile file="${confdir}/${project.artifactId}/maven.filter"/>
 									</filterset>
                 				</copy>
