--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,13 @@
 			<artifactId>gt-epsg-hsql</artifactId>
 			<version>${gt.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>apache-log4j-extras</artifactId>
+			<version>1.1</version>
+			<type>jar</type>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
