--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
+			<type>jar</type>
+		</dependency>		<dependency>
+			<groupId>log4j</groupId>
 			<artifactId>apache-log4j-extras</artifactId>
 			<version>1.1</version>
 			<type>jar</type>
