--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 		<dependency>
 			<groupId>org.mapfish.print</groupId>
 			<artifactId>print-lib</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<version>1.2-GEORCHESTRA</version>
 		</dependency>
 		<!--  geotools -->
 		<dependency>
