--- a/jsbuild/main.cfg
+++ b/jsbuild/main.cfg
@@ -19,7 +19,6 @@ first =
     OpenLayers/BaseTypes/Class.js
     OpenLayers/Util.js
     OpenLayers/Lang.js
-    OpenLayers/Lang/en.js
     OpenLayers/Console.js
     OpenLayers/BaseTypes/Pixel.js
     OpenLayers/BaseTypes/Bounds.js
@@ -29,7 +28,6 @@ first =
     overrides/override-ext-ajax.js
     Styler/Util.js
 include =
-    locale/ext-lang-fr.js
     GEOR_getfeatureinfo.js
     GEOR_resultspanel.js
     GEOR_querier.js
@@ -41,3 +39,35 @@ exclude =
     Ext.ux/SingleFile.js
     GeoExt.js
     GeoExt/SingleFile.js
+[lang/fr.js]
+root =
+    ../src/main/webapp/lib/externals/openlayers/lib
+    ../src/main/webapp/lib/externals/ext/src
+    ../src/main/webapp/app/js
+#~ first =
+    #~ OpenLayers/Lang/fr.js
+include =
+    GEOR_Lang/fr.js
+    locale/ext-lang-fr.js
+
+[lang/en.js]
+root =
+    ../src/main/webapp/lib/externals/openlayers/lib
+    ../src/main/webapp/lib/externals/ext/src
+    ../src/main/webapp/app/js
+#~ first =
+    #~ OpenLayers/Lang/en.js
+include =
+    GEOR_Lang/en.js
+    locale/ext-lang-en.js
+
+[lang/es.js]
+root =
+    ../src/main/webapp/lib/externals/openlayers/lib
+    ../src/main/webapp/lib/externals/ext/src
+    ../src/main/webapp/app/js
+#~ first =
+    #~ OpenLayers/Lang/es.js
+include =
+    GEOR_Lang/es.js
+    locale/ext-lang-es.js
