mapfishapp now uses the styler translation files

--- a/jsbuild/main.cfg
+++ b/jsbuild/main.cfg
@@ -39,35 +39,42 @@ exclude =
     Ext.ux/SingleFile.js
     GeoExt.js
     GeoExt/SingleFile.js
+
 [lang/fr.js]
 root =
     ../src/main/webapp/lib/externals/openlayers/lib
     ../src/main/webapp/lib/externals/ext/src
+    ../src/main/webapp/lib/externals/styler/lib
     ../src/main/webapp/app/js
 #~ first =
     #~ OpenLayers/Lang/fr.js
 include =
     GEOR_Lang/fr.js
+    Styler/lang/fr.js
     locale/ext-lang-fr.js
 
 [lang/en.js]
 root =
     ../src/main/webapp/lib/externals/openlayers/lib
     ../src/main/webapp/lib/externals/ext/src
+    ../src/main/webapp/lib/externals/styler/lib
     ../src/main/webapp/app/js
 #~ first =
     #~ OpenLayers/Lang/en.js
 include =
     GEOR_Lang/en.js
+    Styler/lang/en.js
     locale/ext-lang-en.js
 
 [lang/es.js]
 root =
     ../src/main/webapp/lib/externals/openlayers/lib
     ../src/main/webapp/lib/externals/ext/src
+    ../src/main/webapp/lib/externals/styler/lib
     ../src/main/webapp/app/js
 #~ first =
     #~ OpenLayers/Lang/es.js
 include =
     GEOR_Lang/es.js
+    Styler/lang/es.js
     locale/ext-lang-es.js
