custom templates allowed in combos

--- a/src/main/webapp/app/addons/cadastrefr/manifest.json
+++ b/src/main/webapp/app/addons/cadastrefr/manifest.json
@@ -11,6 +11,35 @@
             "field1": {
                 "file": "cities.json",
                 "valuefield": "code_insee",
+                "displayfield": "nom_com",
+                "template": "<b>{nom_com}</b> ({code_dep})"
+            },
+            "field2": {
+                "wfs": "http://ids.pigma.org/geoserver/ign/wfs",
+                "typename": "ign:ign_bdparcellaire_sections",
+                "matchingproperties": {
+                    "field1": "code_insee"
+                },
+                "valuefield": "section",
+                "displayfield": "section",
+                "template": "<b>{section}</b>"
+            },
+            "field3": {
+                "wfs": "http://ids.pigma.org/geoserver/ign/wfs",
+                "typename": "ign:ign_bdparcellaire_localisants",
+                "matchingproperties": {
+                    "field1": "code_insee",
+                    "field2": "section"
+                },
+                "valuefield": "numero",
+                "displayfield": "numero",
+                "template": "<b>{numero}</b> {section}"
+            }
+        },
+        "tab2": {
+            "field1": {
+                "file": "cities.json",
+                "valuefield": "code_insee",
                 "displayfield": "nom_com"
             },
             "field2": {
@@ -23,24 +52,6 @@
                 "displayfield": "section"
             },
             "field3": {
-                "wfs": "http://ids.pigma.org/geoserver/ign/wfs",
-                "typename": "ign:ign_bdparcellaire_localisants",
-                "matchingproperties": {
-                    "field1": "code_insee",
-                    "field2": "section"
-                },
-                "valuefield": "numero",
-                "displayfield": "numero"
-            }
-        },
-        "tab2": {
-            "field1": {
-                "wfs": "http://ids.pigma.org/geoserver/ign/wfs",
-                "typename": "ign:ign_bdparcellaire_communes",
-                "valuefield": "code_insee",
-                "displayfield": "nom_com"
-            },
-            "field2": {
                 "wfs": "http://ids.pigma.org/geoserver/ign/wfs",
                 "typename": "cadastre:localisants_bdparc_majic2012",
                 "matchingproperties": {
