cadastre addon renaming

--- a/src/main/webapp/app/addons/cadastre/manifest.json
+++ b/src/main/webapp/app/addons/cadastre/manifest.json
@@ -1,9 +1,9 @@
 {
     "js": [
-        "js/cadastre.js"
+        "js/main.js"
     ],
     "css": [
-        "css/cadastre.css"
+        "css/main.css"
     ],
     "default_options": {
         "editableCombos": true,
