restrict tab availability to specific roles

--- a/src/main/webapp/app/addons/cadastre/manifest.json
+++ b/src/main/webapp/app/addons/cadastre/manifest.json
@@ -7,6 +7,10 @@
     ],
     "default_options": {
         "editableCombos": true,
+        "roles": {
+            "tab1": [],
+            "tab2": ["ROLE_SV_ADMIN"]
+        },
         "tab1": {
             "field1": {
                 "file": "cities.json",
