issue4291 programming in progress - geojson for feature collection for shp,tab and mif format

--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,11 @@
             <artifactId>gt-ogr</artifactId>
             <version>${gt.version}</version>
         </dependency>
-		
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-geojson</artifactId>
+            <version>${gt.version}</version>
+        </dependency>		
 		<!-- geotools - handles ESPG -->
 		<dependency>
 			<groupId>org.geotools</groupId>
