--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,12 @@
 		</dependency>
         <dependency>
             <groupId>org.geotools</groupId>
-            <artifactId>gt-ogr</artifactId>
+            <artifactId>gt-ogr-core</artifactId>
+            <version>${gt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-ogr-bridj</artifactId>
             <version>${gt.version}</version>
         </dependency>
         <dependency>
