--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
     </filter>
    <filter>
         <filter-name>UTF8Filter</filter-name>
-        <filter-class>com.camptocamp.UTF8Filter</filter-class>
+        <filter-class>org.georchestra.mapfishapp.UTF8Filter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>UrlRewriteFilter</filter-name>
