--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 		<artifactId>root</artifactId>
 		<version>1.0</version>
 	</parent>
+	
 	<artifactId>mapfishapp</artifactId>
 	<packaging>war</packaging>
 	<name>mapfishapp Maven Webapp</name>
@@ -20,10 +21,10 @@
 	</scm>
 	<dependencies>
 	  <dependency>
-    	<groupId>commons-lang</groupId>
-    	<artifactId>commons-lang</artifactId>
-    	<version>2.6</version>
-    </dependency>
+		<groupId>commons-lang</groupId>
+		<artifactId>commons-lang</artifactId>
+		<version>2.6</version>
+	</dependency>
 		<dependency>
 			<groupId>org.tuckey</groupId>
 			<artifactId>urlrewritefilter</artifactId>
@@ -58,11 +59,6 @@
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.2.1</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -106,6 +102,21 @@
 		<dependency>
 			<groupId>org.geotools</groupId>
 			<artifactId>gt-wfs</artifactId>
+			<version>${gt.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-ogr-core</artifactId>
+			<version>${gt.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-ogr-jni</artifactId>
+			<version>${gt.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-geojson</artifactId>
 			<version>${gt.version}</version>
 		</dependency>
 		<!-- geotools - handles ESPG -->
@@ -157,10 +168,10 @@
 			</plugins>
 		</pluginManagement>
 		<plugins>
-		      <plugin>
+            <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-		      </plugin>
+            </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
@@ -170,11 +181,11 @@
 			</plugin>
 			<plugin>
 				<!--
-                      Copy du fichier default.wmc.example si il n'existe
-                      pas de fichier default.wmc dans le repertoire src/main/webapp.
-                      Ce fichier n'est pas écrasé si le packageur de l'application
-                      a placé son propre fichier default.wmc
-                -->
+					  Copy du fichier default.wmc.example si il n'existe
+					  pas de fichier default.wmc dans le repertoire src/main/webapp.
+					  Ce fichier n'est pas écrasé si le packageur de l'application
+					  a placé son propre fichier default.wmc
+				-->
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
 					<execution>
@@ -190,7 +201,7 @@
 									<filterset begintoken="$${" endtoken="}" recurse="false">
 										<filtersfile file="${confdir}/${project.artifactId}/maven.filter"/>
 									</filterset>
-                				</copy>
+								</copy>
 								<copy todir="${basedir}/src/main/webapp/" overwrite="true" verbose="true" failonerror="false">
 									<fileset dir="${confdir}/${project.artifactId}">
 										<exclude name="**/maven.filter"/>
@@ -205,12 +216,12 @@
 				</executions>
 			</plugin>  
 			<plugin>
- 				<groupId>org.apache.maven.plugins</groupId>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
 				  <warName>mapfishapp-private</warName>
 				</configuration>
-		  </plugin>
+            </plugin>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
@@ -229,9 +240,9 @@
 				<version>1.0-beta-1</version>
 				<configuration>
 					<!--
-                    <server> and <url> must be specified on the "mvn tomcat:redeploy"
-                    command line.
-                    -->
+					<server> and <url> must be specified on the "mvn tomcat:redeploy"
+					command line.
+					-->
 					<path>/${project.build.finalName}</path>
 				</configuration>
 			</plugin>
@@ -259,9 +270,9 @@
 				<configuration>
 					<executable>jsbuild/${jsbuild.command}</executable>
 					<!--
-                        <arguments>
-                        </arguments>
-                        -->
+						<arguments>
+						</arguments>
+						-->
 				</configuration>
 			</plugin>
 			<plugin>
@@ -271,6 +282,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.5.2</version>
 				<executions>
 					<execution>
 						<goals>
@@ -295,26 +307,32 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
+				<version>2.10</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
+				<version>2.3</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>jdepend-maven-plugin</artifactId>
+				<version>2.0</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-scm-plugin</artifactId>
+				<version>1.8.1</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-changelog-plugin</artifactId>
+				<version>2.2</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -327,6 +345,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.5.2</version>
 			</plugin>
 		</plugins>
 	</reporting>
