--- a/jsbuild/main.cfg
+++ b/jsbuild/main.cfg
@@ -29,6 +29,7 @@ first =
     Styler/Util.js
 include =
     GEOR_getfeatureinfo.js
+    GEOR_selectfeature.js
     GEOR_resultspanel.js
     GEOR_querier.js
     GEOR_styler.js
