--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,7 +37,7 @@
 	    <servlet-class>org.mapfish.print.servlet.MapPrinterServlet</servlet-class>
 	    <init-param>
 	      <param-name>config</param-name>
-	      <param-value>print/config.yaml</param-value>
+	      <param-value>WEB-INF/print/config.yaml</param-value>
 	    </init-param>
   	</servlet>
     <servlet>
@@ -52,7 +52,8 @@
     <servlet-mapping>
         <servlet-name>ws</servlet-name>
         <url-pattern>/ws/*</url-pattern>
-    </servlet-mapping>  
+    </servlet-mapping>
+
     <servlet-mapping>
 	    <servlet-name>mapfish.print</servlet-name>
 	    <url-pattern>/pdf/*</url-pattern>
