--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,7 +37,7 @@
 	    <servlet-class>org.mapfish.print.servlet.MapPrinterServlet</servlet-class>
 	    <init-param>
 	      <param-name>config</param-name>
-	      <param-value>print/config.yaml</param-value>
+	      <param-value>WEB-INF/print/config.yaml</param-value>
 	    </init-param>
   	</servlet>
     <servlet>
