--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,17 @@
 			<artifactId>gt-wfs</artifactId>
 			<version>${gt.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-shapefile</artifactId>
+			<version>${gt.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.georchestra</groupId>
+			<artifactId>gt-mif</artifactId>
+			<version>1.0</version>
+		</dependency>
 		
         <dependency>
             <groupId>org.geotools</groupId>
