kml reader using geotools implementation

--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,12 @@
         
         <dependency>
             <groupId>org.geotools</groupId>
+            <artifactId>gt-xsd-kml</artifactId>
+            <version>${gt.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.geotools</groupId>
             <artifactId>gt-geojson</artifactId>
             <version>${gt.version}</version>
         </dependency>		
