mapfishapp - fix the dependency version for gt-mif

--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
 		<dependency>
 			<groupId>org.georchestra</groupId>
 			<artifactId>gt-mif</artifactId>
-			<version>13.02</version>
+			<version>13.02-SNAPSHOT</version>
 		</dependency>
 		
         <dependency>
