Prefixing translations string to avoid conflicts

--- a/src/main/webapp/app/addons/annotation/manifest.json
+++ b/src/main/webapp/app/addons/annotation/manifest.json
@@ -11,41 +11,72 @@
     ],
     "default_options": {},
     "i18n": {
-        "en": {},
+        "en": {
+            "annotation.drawing_tools": "Drawing tools",
+            "annotation.delete_feature": "Delete feature",
+            "annotation.delete_confirm": "Do you really want to delete this feature ?",
+            "annotation.delete": "Delete",
+            "annotation.delete_all": "DeleteAll",
+            "annotation.modify": "Modify",
+            "annotation.linestring": "LineString",
+            "annotation.multilinestring": "MultiLineString",
+            "annotation.point": "Point",
+            "annotation.circle": "Circle",
+            "annotation.box": "Box",
+            "annotation.multipoint": "MultiPoint",
+            "annotation.polygon": "Polygon",
+            "annotation.multipolygon": "MultiPolygon",
+            "annotation.label": "Label",
+            "annotation.create_point": "Create point",
+            "annotation.create_circle": "Create circle",
+            "annotation.create_box": "Create box",
+            "annotation.create_line": "Create line",
+            "annotation.create_polygon": "Create polygon",
+            "annotation.create_label": "Create label",
+            "annotation.delete_all_features": "Delete all features",
+            "annotation.delete_features_confirm": "Do you really want to delete all features ?",
+            "annotation.close": "Close",
+            "annotation.style": "Style",
+            "annotation.size": "Size",
+            "annotation.fontsize": "fontSize",
+            "annotation.strokewidth": "strokeWidth",
+            "annotation.color": "Color",
+            "annotation.name": "Name",
+            "annotation.no_title": "no title"
+        },
         "es": {},
         "fr": {
-            "Drawing tools": "Outils de dessin",
-            "Delete feature": "Supprimer l'objet",
-            "Do you really want to delete this feature ?": "Voulez-vous vraiment supprimer cet objet ?",
-            "Delete": "Supprimer",
-            "DeleteAll": "Supprimer",
-            "Modify": "Modifier",
-            "LineString": "Ligne",
-            "MultiLineString": "MultiLigne",
-            "Point": "Point",
-            "Circle": "Cercle",
-            "Box": "Rectangle",
-            "MultiPoint": "MultiPoint",
-            "Polygon": "Polygone",
-            "MultiPolygon": "MultiPolygone",
-            "Label": "Étiquette",
-            "Create point": "Créer point",
-            "Create circle": "Créer cercle",
-            "Create box": "Créer rectangle",
-            "Create line": "Créer ligne",
-            "Create polygon": "Créer polygone",
-            "Create label": "Créer étiquette",
-            "Delete all features": "Supprimer tous les objets",
-            "Delete All Features": "Supprimer Tous Les Objets",
-            "Do you really want to delete all features ?": "Voulez-vous vraiment supprimer tous les objets ?",
-            "Close": "Fermer",
-            "Style": "Style",
-            "Size": "Taille",
-            "fontSize": "Taille",
-            "strokeWidth": "Épaisseur",
-            "Color": "Couleur",
-            "Name": "Nom",
-            "no title": "Sans titre"
+            "annotation.drawing_tools": "Outils de dessin",
+            "annotation.delete_feature": "Supprimer l'objet",
+            "annotation.delete_confirm": "Voulez-vous vraiment supprimer cet objet ?",
+            "annotation.delete": "Supprimer",
+            "annotation.delete_all": "Supprimer",
+            "annotation.modify": "Modifier",
+            "annotation.linestring": "Ligne",
+            "annotation.multilinestring": "MultiLigne",
+            "annotation.point": "Point",
+            "annotation.circle": "Cercle",
+            "annotation.box": "Rectangle",
+            "annotation.multipoint": "MultiPoint",
+            "annotation.polygon": "Polygone",
+            "annotation.multipolygon": "MultiPolygone",
+            "annotation.label": "Étiquette",
+            "annotation.create_point": "Créer point",
+            "annotation.create_circle": "Créer cercle",
+            "annotation.create_box": "Créer rectangle",
+            "annotation.create_line": "Créer ligne",
+            "annotation.create_polygon": "Créer polygone",
+            "annotation.create_label": "Créer étiquette",
+            "annotation.delete_all_features": "Supprimer tous les objets",
+            "annotation.delete_features_confirm": "Voulez-vous vraiment supprimer tous les objets ?",
+            "annotation.close": "Fermer",
+            "annotation.style": "Style",
+            "annotation.size": "Taille",
+            "annotation.fontsize": "Taille",
+            "annotation.strokewidth": "Épaisseur",
+            "annotation.color": "Couleur",
+            "annotation.name": "Nom",
+            "annotation.no_title": "Sans titre"
         }
     }
 }
