--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ src/main/webapp/default.wmc
 src/main/webapp/print/
 src/main/webapp/WEB-INF/ws-servlet.xml
 src/main/webapp/WEB-INF/jsp/index.jsp
+src/main/webapp/contexts/
